Remove console log on scroll function and fix blog post font size on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -844,7 +844,7 @@ footer {
 }
 
 .blog-info h2 {
-  font-size: 2.5rem;
+  font-size: clamp(2rem, 5vw, 2.5rem);
   line-height: 1.4;
 }
 
@@ -867,6 +867,9 @@ footer {
     padding: 1rem;
     flex-direction: column;
     gap: 1rem;
+  }
+  .blog-info {
+    padding: 0.5rem;
   }
 }
 
